adding libs + dlls

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Release
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+.dll
 
 # Fortran module files
 *.mod
@@ -27,7 +27,7 @@ Release
 *.lai
 *.la
 *.a
-*.lib
+.lib
 
 # Executables
 *.exe
